--- a/src/style.css
+++ b/src/style.css
@@ -18,3 +18,42 @@
 .table td {
     vertical-align: middle;
 }
+
+.detail-page {
+    margin-top: 4rem;
+    margin-bottom: 10rem;
+}
+
+.form .form-control-plaintext {
+    outline: none;
+    padding: 0.375rem 0.75rem;
+    background: #f5f2f0;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+}
+
+.form select.form-control-plaintext {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+}
+
+.form select.form-control-plaintext::-ms-expand {
+    display: none;
+}
+
+.form fieldset {
+    padding: 0 1rem;
+    border: 1px solid #ddd;
+    border-radius: .5rem;
+    margin-bottom: 3rem;
+}
+
+.form fieldset .form-group {
+    margin-left: .5rem;
+    margin-right: 1rem;
+    margin-bottom: 2rem;
+}
+
+.form fieldset legend {
+    width: auto;
+    padding: 0 .5rem
+}
