--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,10 @@
   outline: none;
   padding: 0.375rem 0;
 }
+.form .form-control-link {
+  display: block;
+  padding: 0.375rem 0;
+}
 
 .form .form-control-plaintext--bold {
   font-weight: bold;
